Add: Implemented authentication
